:construction: Middle part work in progres

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section id="sectionLeft">
         <div id="divLogo">
             <object data="media/Logo.svg"></object>
-            <span>Inance</span>
+            <span>inance</span>
         </div>
         <div id="divNavLog">
             <div id="divNav">
@@ -46,7 +46,7 @@
                     </div>
                 </nav>
             </div>
-            <div>
+            <div id="LogOut">
                 <object data="media/LogOut.svg"></object>
                 <span>Log Out</span>
             </div>
@@ -54,7 +54,37 @@
     </section>
 
     <section id="sectionMiddle"> 
+        <div id="divMiddleTop">
+            <span>Hi, Rogers</span>
+            <div id="divSearch">
+                <object data="media/Search.svg"></object>
+                <input type="text" placeholder="Search">
+            </div>
+        </div>
+        <div id="divMiddleInfo">
+            <div id="moulaStats">
+                <span>Total balance</span>
+                <span>0.97375387</span>
+                <span>$40,836.29</span>
+            </div>
+            <div id="divNavInfo">
+                <span id="infoSelect">Portfolio</span>
+                <span>Funding</span>
+                <span>Assets</span>
+                <span>P2P</span>
+            </div>
+        </div>
+        <div id="graphic">
 
+        </div>
+        <div id="transactionsRecent">
+            <div id="transactionsText">
+                <span>Recent transactions</span>
+                <span>See all coins</span>
+            </div>
+            <div></div>
+            <div></div>
+        </div>
     </section>
     <section id="sectionRight">
 
