:sparkles: Add all part in HTLM. Need CSS

--- a/index.html
+++ b/index.html
@@ -82,12 +82,143 @@
                 <span>Recent transactions</span>
                 <span>See all coins</span>
             </div>
-            <div></div>
-            <div></div>
+            <div class="transaction">
+                <div>
+                    <object data="media/Bitcoin.svg" class="icon"></object>
+                </div>
+                <div>
+                    <span>Bitcoin</span>
+                    <span class="moneyName">BTC</span>
+                </div>
+                <div>
+                    <span>Market Cap</span>
+                    <span>$40,243.70</span>
+                </div>
+                <div>
+                    <span>24h change</span>
+                    <span>+1,56</span>
+                </div>
+                <div>
+                    <object data="media/Trading.svg"></object>
+                </div>
+                <div>
+                    <span class="tradeButton">Trade</span>
+                </div>
+            </div>
+            <div class="transaction">
+                <div>
+                    <object data="media/Etherium.svg" class="icon"></object>
+                </div>
+                <div>
+                    <span>Etherum</span>
+                    <span class="moneyName">ETH</span>
+                </div>
+                <div>
+                    <span>Market Cap</span>
+                    <span>$40,243.70</span>
+                </div>
+                <div>
+                    <span>24h change</span>
+                    <span>+1,56</span>
+                </div>
+                <div>
+                    <object data="media/Trading.svg"></object>
+                </div>
+                <div>
+                    <span class="tradeButton">Trade</span>
+                </div>
+            </div>
         </div>
     </section>
-    <section id="sectionRight">
 
+    <section id="sectionRight">
+        <div>
+            <object data="media/Cloche.svg"></object>
+            <object data="media/Profil.svg"></object>
+        </div>
+        <div>
+            <span>Recent Transactions</span>
+            <div>
+                <div>
+                    <object data="media/Bitcoin.svg"></object>
+                    <div>
+                        <span>Bitcoin</span>
+                        <span>Recieved</span>
+                    </div>
+                    <div>
+                        <span>+$3,546</span>
+                        <span>Today, 13:45 pm</span>
+                </div>
+                </div>
+                <div>
+                    <object data="media/Bitcoin.svg"></object>
+                    <div>
+                        <span>Bitcoin</span>
+                        <span>Recieved</span>
+                    </div>
+                    <div>
+                        <span>+$3,546</span>
+                        <span>Today, 13:45 pm</span>
+                    </div>
+                </div>
+                <div>
+                    <object data="media/Bitcoin.svg"></object>
+                    <div>
+                        <span>Bitcoin</span>
+                        <span>Recieved</span>
+                    </div>
+                    <div>
+                        <span>+$3,546</span>
+                        <span>Today, 13:45 pm</span>
+                    </div>
+                </div>
+                <div>
+                    <object data="media/Bitcoin.svg"></object>
+                    <div>
+                        <span>Bitcoin</span>
+                        <span>Recieved</span>
+                    </div>
+                    <div>
+                        <span>+$3,546</span>
+                        <span>Today, 13:45 pm</span>
+                    </div>
+                </div>
+                <div>
+                    <object data="media/Bitcoin.svg"></object>
+                    <div>
+                        <span>Bitcoin</span>
+                        <span>Recieved</span>
+                    </div>
+                    <div>
+                        <span>+$3,546</span>
+                        <span>Today, 13:45 pm</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <span>Assets</span>
+            <div>
+                <div>
+                    <object data="" type=""></object>
+                    <span></span>
+                </div>
+                <div>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <object data="" type=""></object>
+                    <span></span>
+                </div>
+                <div>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
