--- a/index.html
+++ b/index.html
@@ -132,25 +132,14 @@
     </section>
 
     <section id="sectionRight">
-        <div>
+        <div id="divTopRight">
             <object data="media/Cloche.svg"></object>
             <object data="media/Profil.svg"></object>
         </div>
-        <div>
+        <div id="divMiddleLeft">
             <span>Recent Transactions</span>
             <div>
-                <div>
-                    <object data="media/Bitcoin.svg"></object>
-                    <div>
-                        <span>Bitcoin</span>
-                        <span>Recieved</span>
-                    </div>
-                    <div>
-                        <span>+$3,546</span>
-                        <span>Today, 13:45 pm</span>
-                </div>
-                </div>
-                <div>
+                <div class="elementTransactionsLeft">
                     <object data="media/Bitcoin.svg"></object>
                     <div>
                         <span>Bitcoin</span>
@@ -161,7 +150,7 @@
                         <span>Today, 13:45 pm</span>
                     </div>
                 </div>
-                <div>
+                <div class="elementTransactionsLeft">
                     <object data="media/Bitcoin.svg"></object>
                     <div>
                         <span>Bitcoin</span>
@@ -172,7 +161,7 @@
                         <span>Today, 13:45 pm</span>
                     </div>
                 </div>
-                <div>
+                <div class="elementTransactionsLeft">
                     <object data="media/Bitcoin.svg"></object>
                     <div>
                         <span>Bitcoin</span>
@@ -183,7 +172,18 @@
                         <span>Today, 13:45 pm</span>
                     </div>
                 </div>
-                <div>
+                <div class="elementTransactionsLeft">
+                    <object data="media/Bitcoin.svg"></object>
+                    <div>
+                        <span>Bitcoin</span>
+                        <span>Recieved</span>
+                    </div>
+                    <div>
+                        <span>+$3,546</span>
+                        <span>Today, 13:45 pm</span>
+                    </div>
+                </div>
+                <div class="elementTransactionsLeft">
                     <object data="media/Bitcoin.svg"></object>
                     <div>
                         <span>Bitcoin</span>
@@ -196,11 +196,10 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div id="divBottomLeft">
             <span>Assets</span>
             <div>
                 <div>
-                    <object data="" type=""></object>
                     <span></span>
                 </div>
                 <div>
@@ -210,7 +209,6 @@
             </div>
             <div>
                 <div>
-                    <object data="" type=""></object>
                     <span></span>
                 </div>
                 <div>
