:sparkles: Add all right part

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </button>
                 <nav>
                     <div>
-                        <object data="media/Dashboard.svg"></object>
+                        <object data="media/Invoices.svg"></object>
                         <a href="#">Invoices</a>
                     </div>
                     <div>
@@ -198,23 +198,21 @@
         </div>
         <div id="divBottomLeft">
             <span>Assets</span>
-            <div>
+            <div class="elementAssets">
                 <div>
-                    <span></span>
+                    <object data="media/Bitcoin.svg"></object>
+                    <span>Bitcoin</span>
+                    <span>183,163.39</span>
                 </div>
-                <div>
-                    <span></span>
-                    <span></span>
-                </div>
+                <span>BTC</span>
             </div>
-            <div>
+            <div class="elementAssets">
                 <div>
-                    <span></span>
+                    <object data="media/Bitcoin.svg"></object>
+                    <span>Bitcoin</span>
+                    <span>183,163.39</span>
                 </div>
-                <div>
-                    <span></span>
-                    <span></span>
-                </div>
+                <span>BTC</span>
             </div>
         </div>
     </section>
