:iphone: Responsive mode

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <title>Document</title>
 </head>
 <body>
+    <section id="responsiveSection">
+        <div class="divLogo">
+            <object data="media/Logo.svg"></object>
+            <span>inance</span>
+        </div>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </section>
     <section id="sectionLeft">
-        <div id="divLogo">
+        <div class="divLogo">
             <object data="media/Logo.svg"></object>
             <span>inance</span>
         </div>
